--- a/image.html
+++ b/image.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <img src="IMg_1.jpg" alt="Your Image">
+    <img src="image_1.png" alt="Your Image">
 </body>
 </html>
