--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <img src="image_1.png" alt="Your Image">
+    <img src="img_1.png" alt="Your Image">
 </body>
 </html>
